# SystemDetect

./: CMakeLists.txt  README.md  index.html
.github/workflows/: Codespell.yml  Docs.yml  Format.yml  Linux-Clang.yml  Linux-GCC.yml  MacOS-Clang.yml  MacOS-GCC.yml  Windows-MSVC.yml  Windows-MSYS2.yml  codeql-analysis.yml
cmake/: GetCMakeMM.cmake  detect-arch.c  detect-arch.cmake  detect-compiler.cmake  detect-endianness.cmake
docs/: CMakeLists.txt
